# sfsim

./: .gitignore  AUTHORS  CREDITS  ChangeLog  Changelog  Gemfile  HelloTriangleSimple.java  HelloWorldJNI.c  HelloWorldJNI.java  Makefile  README.md  TODO.md  TODO.org  _config.yml  about.markdown  about.txt  build.clj  deps.edn  faq.md  globe.sh  index.markdown  index.md  keyboard.md  multireselevation.sh  multiresmap.sh  news.md  nsis-config.nsi  packr-config.json  playtest.md  pom.xml  presskit.md  project.clj  pyproject.toml  raw-opengl.clj  serve.sh  steam_appid.txt  support.md  test.clj
.clj-kondo/: config.edn
_includes/: custom-head.html  head.html  youtube.html
_layouts/: home.html
_posts/: 2025-04-21-welcome.markdown  2025-05-07-gear.md  2025-05-30-landing-gear-physics.md  2025-07-03-playtest.md  2025-07-28-joystick-config.md  2025-08-24-following-camera.md  2025-11-19-rocket-plume.md  2026-01-04-rcs-thrusters.md  2026-03-04-sound-effects.md  2026-03-17-orbital-elements.md  2026-05-28-launch-learning.md  2026-06-04-orbit-mfd.md  2026-06-12-navball-mfd.md  2026-06-14-rate-needles.md  2026-06-18-steam-achievements.md  2026-06-30-github-ci.md  2026-07-16-deferred-shading.md
data/: .gitignore
etc/: HelloTriangleSimple.java  Makefile  aerospike.glsl  assimptest.clj  atmos.clj  atmosold.clj  bluenoise.clj  cartpole.py  cl.clj  cl.gnuplot  clojure-deps.edn  clojure-jam-2026.txt  cloudcube.clj  cloudmap.clj  clouds.clj  cloudsonly.clj  cloudy.clj  cm.gnuplot  cover.clj  cube.glb  cube.gltf  cube1.glb  cube2.glb  cube3.glb  curl.clj  deps.edn  errors.gp  euler.gp  (+46 more)
(+522 files in other folders)
